package baseNoStates.doorstates;public class Clock {
}
